traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:18: error: illegal start of simple expression
  if (getY()==6) ){
                 ^